<resources>
    <string name="app_name">Recipe Roamer</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="info">Info</string>
    <string name="search">Search</string>
    <string name="welcome_text">Find your food!</string>
    <string name="popular_food">Discover</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="food">Food</string>
    <string name="add_favourite">Add Favourite</string>
    <string name="cuisine">Cuisine</string>
    <string name="instructions">Instructions</string>
    <string name="skip">Skip</string>
    <string name="header">Header</string>
    <string name="app_info">App Info</string>
    <string name="made_by_merthan_kavak">Made by Merthan Kavak</string>
    <string name="added_to_favorites_successfully">Added to favorites successfully!</string>
    <string name="removed_from_favorites">Removed from favorites!</string>
    <string name="video_not_found">Video not found!</string>
    <string name="app">App</string>
    <string name="device_model_app_info">Device Model: %1$s\nApp Info: %2$s</string>
    <string name="undo">Undo</string>
    <string name="application_tour">Application Tour</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="connect_with_me">Connect with Me</string>
    <string name="general">General</string>
    <string name="send_feedback">Send feedback</string>
    <string name="daily_horoscopes">Daily Horoscopes</string>
    <string name="my_other_app">My Other App</string>
    <string name="onboarding_desc_1">Learn cooking with video recipes and take your kitchen skills to the next level.</string>
    <string name="onboarding_title_2"><![CDATA[Discover & Experience]]></string>
    <string name="onboarding_desc_2">Discover a world of flavors with unique regional recipes.</string>
    <string name="onboarding_title_3">Favorite Recipes</string>
    <string name="onboarding_desc_3">Explore delicious recipes, save your favorites, and dive into the joy of cooking inspiration.</string>
    <string name="food_image">Food Image</string>
    <string name="category_image">Category Image</string>
    <string name="information">Information</string>
    <string name="search_food">Search Food</string>
    <string name="info_item_icon">Info Item Icon</string>
    <string name="info_item_action_icon">Info Item Action Icon</string>
    <string name="info_item_title">Info Item Title</string>
    <string name="info_item_icon_background">Info Item Icon Background</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="watch">Watch</string>
</resources>