<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/infoCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_40sdp"
    android:elevation="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp">

            <ImageView
                android:id="@+id/infoIconBg"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:background="@drawable/info_icon_bg"
                android:contentDescription="@string/info_item_icon" />

            <ImageView
                android:id="@+id/infoIcon"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/info_item_icon_background"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_clear"
                app:tint="@color/white" />

        </FrameLayout>

        <TextView
            android:id="@+id/infoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/info_item_title"
            android:textSize="@dimen/_10ssp" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_5sdp"
            android:contentDescription="@string/info_item_action_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_forward"
            app:tint="@color/orange" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
